# src/main/resources/openapi/mastodon.yaml
@@ -5,9 +5,22 @@ info:
   version: 1.0.0
 servers:
   - url: 'https://test-hideout.usbharu.dev'
+
+tags:
+  - name: status
+    description: status
+  - name: account
+    description: account
+  - name: app
+    description: app
+  - name: instance
+    description: instance
+
 paths:
   /api/v2/instance:
     get:
+      tags:
+        - instance
       security:
         - { }
       responses:
@@ -20,6 +33,8 @@ paths:
 
   /api/v1/instance/peers:
     get:
+      tags:
+        - instance
       security:
         - { }
       responses:
@@ -34,6 +49,8 @@ paths:
 
   /api/v1/instance/activity:
     get:
+      tags:
+        - instance
       security:
         - { }
       responses:
@@ -48,6 +65,8 @@ paths:
 
   /api/v1/instance/rules:
     get:
+      tags:
+        - instance
       security:
         - { }
       responses:
@@ -62,6 +81,8 @@ paths:
 
   /api/v1/instance/domain_blocks:
     get:
+      tags:
+        - instance
       security:
         - { }
       responses:
@@ -76,6 +97,8 @@ paths:
 
   /api/v1/instance/extended_description:
     get:
+      tags:
+        - instance
       security:
         - { }
       responses:
@@ -88,6 +111,8 @@ paths:
 
   /api/v1/instance:
     get:
+      tags:
+        - instance
       security:
         - { }
       responses:
@@ -100,6 +125,8 @@ paths:
 
   /api/v1/statuses:
     post:
+      tags:
+        - status
       security:
         - OAuth2:
             - "write:statuses"
@@ -117,6 +144,28 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Status"
+
+  /api/v1/apps:
+    post:
+      tags:
+        - app
+      security:
+        - { }
+      requestBody:
+        description: 作成するApp
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/AppsRequest"
+
+      responses:
+        200:
+          description: 成功
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Application"
 
 components:
   schemas:
@@ -930,6 +979,39 @@ components:
           type: boolean
         hide_totals:
           type: boolean
+
+    Application:
+      type: object
+      properties:
+        name:
+          type: string
+        website:
+          type: string
+          nullable: true
+        vapid_key:
+          type: string
+        client_id:
+          type: string
+        client_secret:
+          type: string
+      required:
+        - name
+        - vapid_key
+
+    AppsRequest:
+      type: object
+      properties:
+        client_name:
+          type: string
+        redirect_uris:
+          type: string
+        scopes:
+          type: string
+        website:
+          type: string
+      required:
+        - client_name
+        - redirect_uris
 
   securitySchemes:
     OAuth2:
